# pocket_arbiter

./: .coveragerc  .dvcignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_CODE_INSTRUCTIONS.md  README.md  colab_github.txt  colab_notebook.txt  colab_snap.txt  colab_snap3.txt  colab_snapshot.txt  google_login.txt  pyproject.toml  requirements.txt  validation_details_fr_q160_q213.csv  validation_summary.json
.claude/: settings.json
.claude/agents/: gs-batch-corrector.md
.claude/skills/: gs-batch-audit.md
.dvc/: config
.githooks/: commit-msg  commit-msg.py  pre-commit  pre-commit.py  pre-push
.github/workflows/: ci.yml
.iso/: README.md  config.json
.iso/checklists/: ai_feature.md  feature_template.md  phase1_pipeline.md  phase2_android_rag.md
.iso/templates/: spec_template.md
android/: .gitkeep
corpus/: .gitignore  INVENTORY.md  README.md  fr.dvc  intl.dvc
corpus/processed/: _rechunked_children.json  chunk_contexts.json  chunk_id_enrichment_report.json  chunks_for_embedding_fr.json  chunks_for_embedding_intl.json  chunks_fr.json  chunks_fr_v2.1.json  chunks_fr_v2.2.json  chunks_fr_v2.json  chunks_intl.json  chunks_intl_v2.json  chunks_semantic_fr.json  chunks_sentence_fr.json  chunks_sentence_fr_optimized.json  chunks_similarity_fr.json  corpus_fr.report.json  corpus_fr_v2.1_qat.report.json  corpus_fr_v2.report.json  corpus_fr_v3.report.json  corpus_intl.report.json  corpus_sentence_fr.report.json  corpus_sentence_fr_qat.report.json  corpus_v2_fr.db.dvc  embeddings_fr.ids.json  embeddings_fr.npy.dvc  embeddings_fr.report.json  embeddings_fr_v2.1_qat.ids.json  embeddings_fr_v2.ids.json  embeddings_fr_v2.report.json  embeddings_fr_v3.ids.json  embeddings_fr_v3.report.json  embeddings_intl.ids.json  embeddings_intl.npy.dvc  embeddings_intl.report.json  embeddings_sentence_fr.ids.json  embeddings_sentence_fr.report.json  embeddings_sentence_fr_qat.ids.json  table_summaries_claude.json  table_summaries_claude_intl.json
data/: training.dvc
data/audit_batches/: batch_1.json  batch_2.json  batch_3.json  batch_4.json  batch_5.json  batch_6.json  batch_summary.json
data/audit_results/: batch_1_results.json  batch_2_results.json  batch_3_results.json  batch_4_results.json  batch_5_results.json  batch_5_summary.json  batch_6_results.json  consolidated.json  corrections_needed.json
data/benchmarks/: audit_gs_v8_mcq_answers_2026-02-28.json  baseline_v8_2026-02-27_summary.json  canal4_vs_phase3_audit.md  doc2query_experiment.md  eval_e2e_mcq_2026-02-28.json  generation_eval.json  generation_eval_base.json  generation_eval_tapt.json  page_fixes.json  page_interpolation_fix.md  recall_baseline.json  recall_baseline.md  recall_hits_before.json  recall_pre_targeted_rows.json  removed_questions_qa_mismatch_2026-02-28.json  removed_questions_qa_mismatch_batch2_2026-02-28.json  retrieval_table_gap_analysis.md  row_as_chunk_experiment.md  table_recall_baseline.json  table_recall_phase1.json  targeted_tables_raw.json
data/benchmarks-v2/: generation_eval.json  generation_eval_base.json  generation_eval_tapt.json
data/gs_generation/: chunk_strata.json  gonogo_30q_judge.json  gonogo_30q_truth_v2.json  p2_candidates.json  p2_replacements.json  p3_page_candidates.json  validation_report_iso.json
data/semantic_validation/: VALIDATION_REPORT.md  agent_1_results.json  agent_2_results.json  agent_3_results.json  agent_4_results.json  agent_5_results.json  agent_6_results.json  batch_1_input.json  batch_2_input.json  batch_3_input.json  batch_4_input.json  batch_5_input.json  batch_6_input.json  consolidated_results.json
data/synthetic_triplets/: answerability_report.json  audit_quality_issues.json  audit_sample_review.json  checkpoint_ffe_100.json  checkpoint_ffe_1000.json  checkpoint_ffe_1100.json  checkpoint_ffe_1200.json  checkpoint_ffe_1300.json  checkpoint_ffe_1400.json  checkpoint_ffe_1500.json  (+17 more)
docs/: AI_POLICY.md  ANNALES_STRUCTURE.md  ARCHITECTURE.md  CHUNKING_STRATEGY.md  CHUNK_SCHEMA.md  CVE_EXCEPTIONS.md  DEPENDENCIES.md  DOC_CONTROL.md  DVC_GUIDE.md  GENERATION_EVAL_METHODOLOGY.md  GOLD_STANDARD_AUDIT_2026-01-19.md  GOLD_STANDARD_AUDIT_2026-01-20.md  GOLD_STANDARD_SPECIFICATION.md  GS_VALIDATION.md  HARD_CASES_VERIFIED.md  INDEX.md  ISO_MODEL_DEPLOYMENT_ANALYSIS.md  ISO_STANDARDS_REFERENCE.md  ISO_VECTOR_SOLUTIONS.md  PHASE1B_REMEDIATION_PLAN.md  PROJECT_HISTORY.md  PROJECT_ROADMAP.md  QUALITY_REQUIREMENTS.md  README.md  RECALL_OPTIMIZATION_PLAN.md  RECALL_REMEDIATION.md  REPRODUCTION_GUIDE.md  RETRIEVAL_PIPELINE.md  TEST_PLAN.md  VISION.md  gold_standard_status_v1.md
models/: .gitignore  CLEANUP_REFERENCE.md  kaggle-gen-answers-output.dvc  kaggle-gen-questions-output.dvc  kaggle-output.dvc  kaggle-sft-output.dvc  kaggle-sft-v2-output.dvc  model_card.json
notebooks/: finetune_embeddinggemma_colab.ipynb  finetune_embeddinggemma_kaggle.ipynb  finetune_minilm_colab.ipynb  generate_triplets_cerebras.ipynb
prompts/: CHANGELOG.md  CLAUDE_CODE_PHASE1.md  README.md
scripts/: README.md  __init__.py  consolidate_semantic_validation.py  create_gold_standard_v3.py  create_gold_standard_v4.py  create_gold_standard_v4_1.py  create_gold_standard_v5.py  p0_gs_traceability_diagnostic.py  p1_rebuild_gs_from_docling.py  p2_cb01_answer_in_chunk.py  p3_extract_docling_mcq.py  p3_metadata_completion.py  p4_audit_fixes.py  requirements.txt  validate_anti_hallucination.py  validate_gold_standard_v5.py
tests/: README.md
(+675 files in other folders)
